# verify-beacon

./: 1024.txt  Cargo.toml  LICENSE  README.md  sapling.txt
src/: lib.rs  main.rs  sha256.rs
