[package]
name = "verify-beacon"
version = "0.1.0"
authors = ["Jason Davies <jason@jasondavies.com>"]

[dependencies]
byteorder = "1"
crunchy = "0.2"
rust-crypto = "0.2"
itertools = "0.10.0"
hex = "0.4.2"
rayon = "1"
packed_simd = { version = "0.3.5", package = "packed_simd_2", features = ["into_bits"] }
