[package]
name = "verify-beacon"
version = "0.1.1"
edition = "2021"
authors = ["Jason Davies <jason@jasondavies.com>"]

[dependencies]
byteorder = "1"
crunchy = "0.2"
sha2 = { version = "0.10", features = ["compress"] }
itertools = "0.10.0"
hex = "0.4.2"
rayon = "1"
packed_simd = { version = "0.3.5", package = "packed_simd_2", features = ["into_bits"] }
